2010-04-15  Zhenyao Mo  <zmo@google.com>

Reviewed by Adam Barth.

        Several tests in fast/canvas/webgl/ failed randomly on Leopard Commit Bot
        This fixes an uninitialized variable bug and restores a glFinish call that used to be present.
        https://bugs.webkit.org/show_bug.cgi?id=36908

        * platform/graphics/mac/GraphicsContext3DMac.cpp:
        (WebCore::GraphicsContext3D::GraphicsContext3D): Initialize width/height to 0/0.
        (WebCore::GraphicsContext3D::prepareTexture): Restore glFinish() in every path.

Canonical link: https://commits.webkit.org/48951@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57664 268f45cc-cd09-0410-ab3c-d52691b4dbfc